refactor(maintenance): 重构保全服务代码结构与依赖注入
- 将枚举类统一移动到 common 模块的 enums 包下
- 将异常类统一移动到 common 模块的 exception 包下
- 将配置类移动到 infrastructure.config 包下
- 将 Feign 客户端移动到 infrastructure.client 包下
- 将命令类从 Lombok 注解改为 Java Record 结构
- 更新 Git 忽略规则，添加 jacoco.exec 和环境变量文件
- 重构应用服务层，使用端口接口替代直接客户端调用
- 在 API DTO 中使用字符串码值代替枚举类型，实现契约自包含
- 更新启动类配置，添加 JPA 实体扫描和调度支持
- 移除冗余的 Axon 命令总线和网关手动配置
- 优化聚合根中的命令处理器参数访问方式